# enduro2d-bootstrap

./: .gitattributes  .gitmodules  .travis.yml  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: darwin.yml  linux.yml  windows.yml
android/: .gitignore  build.gradle
android/game/: build.gradle
android/game/src/main/: AndroidManifest.xml
android/game/src/main/java/enduro2d/bootstrap/: GameActivity.java
android/game/src/main/res/values/: strings.xml
scripts/: build_debug.bat  build_debug.sh  build_debug_x64.bat  build_debug_x86.bat  build_release.bat  build_release.sh  build_release_x64.bat  build_release_x86.bat  gen_msvc2017_project.bat  gen_msvc2019_project.bat  gen_xcode_project.sh  update_modules.sh
sources/: main.cpp
